--- a/html/page_2.html
+++ b/html/page_2.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster&display=swap" rel="stylesheet">
     <title>Document</title>
-    <link rel="stylesheet" href="project1.css">
+    <link rel="stylesheet" href="/main.css">
 </head>
 <body>
 <section class="header">
