--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div id="aboutMeModal">
             <div id="modal-textbox">
                 <h1>Hi I'm Miguel Darensbourg</h1>
-                <img src="Photos/20190525_124539.jpg">
+                <img src="Photos/20190525_124539.jpg" alt="Zion">
                 <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et
                     dolore magna
@@ -120,9 +120,11 @@
             </div>
 
         </div>
-        <button></button>
-        <li id="resume-Btn"><a href="https://docs.google.com/document/d/1D1EDjA7PEPwGKuAA6aIxrtiG6sX6ymbu/edit"
+        <ul>
+            <li id="resume-Btn"><a href="https://docs.google.com/document/d/1D1EDjA7PEPwGKuAA6aIxrtiG6sX6ymbu/edit"
                 target="_blank">Click Here to Check out my Resume</a></li>
+            </ul>
+        
     </section>
 
     <section class="waterfall">
@@ -162,8 +164,9 @@
 
                 <label for="subject">Tell Me About Yourself</label>
                 <textarea id="subject" name="subject" placeholder="Who Are You.." style="height:100px"></textarea>
-
+                <ul>
                 <li id="submit"><a href="html/page_2.html">Submit</a></li>
+                </ul>
 
 
             </form>
