--- a/html/page_2.html
+++ b/html/page_2.html
@@ -15,7 +15,7 @@
     <nav>
         <div class="page-links">
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="">Projects</a></li>
                 <li><a href="">Contact me</a></li>
             </ul>
