--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <div class="page-links">
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="../MyPortfolio/index.html">Home</a></li>
                     <li><a href="">Projects</a></li>
                     <li><a href="">Contact me</a></li>
                 </ul>
