--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
 
                 <label for="profession">Software Engineer</label>
                 <select id="engineer" name="engineer">
+                    <option value="Choose">Choose a Value</option>
                     <option value="yes">Yes</option>
                     <option value="no">No</option>
                     <option value="not sure">Not Sure</option>
